container: edit -> resources

--- a/po/zh-cn/dockerman.po
+++ b/po/zh-cn/dockerman.po
@@ -283,6 +283,9 @@ msgstr "服务端"
 msgid "Daemon unix socket (unix:///var/run/docker.sock) or TCP Remote Hosts (tcp://0.0.0.0:2375), default: unix:///var/run/docker.sock"
 msgstr "后台 Unix socket (unix:///var/run/docker.sock) 或 TCP 远程服务端 (tcp://0.0.0.0:2375)，默认: unix:///var/run/docker.sock"
 
+msgid "Resources"
+msgstr "资源"
+
 msgid "Stats"
 msgstr "状态"
 
