--- a/po/zh-cn/dockerman.po
+++ b/po/zh-cn/dockerman.po
@@ -447,3 +447,6 @@ msgstr "创建 macvlan 接口"
 
 msgid "Auto create macvlan interface in Openwrt"
 msgstr "在 Openwrt 中自动创建 macvlan 接口"
+
+msgid "Kill"
+msgstr "强制关闭"
