luci-app-dockerman: update I18n

--- a/applications/luci-app-dockerman/po/zh-cn/dockerman.po
+++ b/applications/luci-app-dockerman/po/zh-cn/dockerman.po
@@ -989,11 +989,11 @@ msgstr ""
 #~ msgid "Access Control"
 #~ msgstr "访问控制"
 
-#~ msgid "Allowed access interfaces"
-#~ msgstr "允许的访问接口"
+msgid "Allowed access interfaces"
+msgstr "允许的访问接口"
 
-#~ msgid "Containers allowed to be accessed"
-#~ msgstr "允许访问的容器"
+msgid "Containers allowed to be accessed"
+msgstr "允许访问的容器"
 
 #~ msgid ""
 #~ "Daemon unix socket (unix:///var/run/docker.sock) or TCP Remote Hosts "
@@ -1017,11 +1017,11 @@ msgstr ""
 #~ msgid "Server Host"
 #~ msgstr "服务器主机"
 
-#~ msgid ""
-#~ "Which container(s) under bridge network can be accessed, even from "
-#~ "interfaces that are not allowed, fill-in Container Id or Name"
-#~ msgstr ""
-#~ "桥接网络下哪些容器可以访问，即使是不允许从接口访问，也要填写容器 ID 或名称"
+msgid ""
+"Which container(s) under bridge network can be accessed, even from "
+"interfaces that are not allowed, fill-in Container Id or Name"
+msgstr ""
+"桥接网络下哪些容器可以访问，即使是不允许从接口访问，也要填写容器 ID 或名称"
 
 msgid "Sysctls (kernel parameters) options"
 msgstr "Sysctls（内核参数）选项"
@@ -1029,7 +1029,7 @@ msgstr "Sysctls（内核参数）选项"
 msgid "Contaienr Info"
 msgstr "容器信息"
 
-#~ msgid ""
-#~ "Which interface(s) can access containers under the bridge network, fill-"
-#~ "in Interface Name"
-#~ msgstr "哪些接口可以访问桥接网络下的容器，请填写接口名称"
+msgid ""
+"Which interface(s) can access containers under the bridge network, fill-"
+"in Interface Name"
+msgstr "哪些接口可以访问桥接网络下的容器，请填写接口名称"
